components: Fix cards with low quality thumbnails
The floating images were overflowing and displacing the text
below. Instead, add them as backgrounds like the high resolution
variant, but considering the image aspect ratio to know which CSS rule
to apply for the background size.

https://phabricator.endlessm.com/T32325

--- a/packages/eos-components/src/styles.scss
+++ b/packages/eos-components/src/styles.scss
@@ -78,10 +78,11 @@ $header-logo-width: 128;
 $header-height: 349px; // Forms an area with the LG breakpoint of aspect ratio: 2.8444
 $hover-lightness: 25%;
 $background-alpha: -8%;
-$card-image-ar: percentage(9 / 16);
+$card-image-ar: 9 / 16;
 
 :export {
   headerLogoWidth: $header-logo-width;
+  cardImageAspectRatio: $card-image-ar;
   xs: map-get($grid-breakpoints, "xs");
   sm: map-get($grid-breakpoints, "sm");
   md: map-get($grid-breakpoints, "md");
